--- a/crates/welt/Cargo.toml
+++ b/crates/welt/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
-pico-args = "0.4.2"
+clap = "3.0.0-beta.4"
 tokio = "1.12.0"
 warp = { version = "0.3.1", default-features = false, features = ["tls"] }
